Rename package to geo-data-cli and update publish workflow
- Rename npm package from geo-data to geo-data-cli (name conflict)
- Remove NPM_TOKEN from publish workflow (use OIDC trusted publishing)
- Sync CLI README with root README

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "geo-data",
+  "name": "geo-data-cli",
   "version": "0.1.0",
   "description": "Copy only the countries you need. No bloat.",
   "type": "module",
